test/files/parser/errors/curly-list-end.otest
name = "Curly bracket after list"
line = 2
character = 13
error = 'Expected value, but received "{".'

---

[ 1, 2, 3 ] {
